update portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,42 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    
-    <title>Portfolio</title>
-    <link rel="stylesheet" type= "text/css" href="../assets/css/style.css">
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+  <meta name="viewport" content="width-device-width, initial-scale=1">
 </head>
+
 <body>
-        <header> 
-                <h1>Andrew Johncey</h1> 
-            
-               <nav>
-                <a href="index.html"> About Me</a>  |
-                <a href="portfolio.html"> Portfolio</a> | 
-                <a href="contacts.html"> Contacts</a>
-                </nav>
-        </header>
-
-        <div class= "container">
-
-                <h2>Portfolio</h2>
-
-                <img id="Pacman" src"pacman.png" alt ""> <br>
-                <img id="Mountain Biking Trails" src" " alt ""> <br>
-                <img id="" src" " alt "">  <br>
-                <img id="" src" " alt ""> <br>
-                <img id="" src" " alt ""> <br>
-                <img id="" src" " alt ""> <br>
-
-        </div>
-
-
-</div>
-
+  <Header>
+    <h1>Andrew Johncey</h1>
+  </Header>
+  <nav class="nav nav-pills flex-column flex-sm-row">
+    <a class="flex-sm-fill text-sm-center nav-link " href="index.html">About Me <span
+        class="sr-only">(current)</span></a>
+    <a class="flex-sm-fill text-sm-center nav-link active" href="portfolio.html">Portfolio</a>
+    <a class="flex-sm-fill text-sm-center nav-link" href="contact.html">Contact</a>
+    </div>
+  </nav>
+  </nav>
+  <main>
+    <section class="section-container">
+      <div class="main">
+        <div class="row">
+          <div class="col-12">
+            <div class="container">
+              <div class="row align-items-end">
+                <div class="col-sm">
+                  <div id=project-1>
+                    <div class="text-center">
+                      <img src="./assets/images/profile_picture_andrew.jpg" class="rounded" alt="profile picture">
+                      <div class="centered">Project 1</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm">
+                  <div class="text-center">
+                    <img src="./assets/images/profile_picture_andrew.jpg" class="rounded" alt="profile picture">
+                    <div class="centered">Project 2</div>
+                  </div>
+                </div>
+                <div class="col-sm">
+                  <div class="text-center">
+                    <img src="./assets/images/profile_picture_andrew.jpg" class="rounded" alt="profile picture">
+                    <div class="centered">Project 3</div>
+                  </div>
+                </div>
+              </div>
+              <br>
+              <div class="row align-items-end">
+                <div class="col-sm">
+                  <div class="text-center">
+                    <img src="./assets/images/profile_picture_andrew.jpg" class="rounded" alt="profile picture">
+                    <div class="centered">Project 4</div>
+                  </div>
+                </div>
+                <div class="col-sm">
+                  <div class="text-center">
+                    <img src="./assets/images/profile_picture_andrew.jpg" class="rounded" alt="profile picture">
+                    <div class="centered">Project 5</div>
+                  </div>
+                </div>
+                <div class="col-sm">
+                  <div class="text-center">
+                    <img src="./assets/images/profile_picture_andrew.jpg" class="rounded" alt="profile picture">
+                    <div class="centered">Project 6</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+    </section>
+    <footer class="footer mt-auto py-3">
+      <div class="container-2">
+        <span class="text">Copyright@ Andy Johncey
+        </span>
+      </div>
+    </footer>
 </body>
-<footer class="footer">
-        Copyright
-        </footer>
 
 </html>
