--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-  <meta name="viewport" content="width-device-width, initial-scale=1">
 </head>
 
 <body>
@@ -29,26 +28,29 @@
       <div class="main">
         <div class="row">
           <div class="col-12">
-            <div class="container">
+            <div class="portfolio-container">
               <div class="row align-items-end">
                 <div class="col-sm">
                   <div id=project-1>
                     <div class="text-center">
-                      <img src="./assets/images/profile_picture_andrew.jpg" class="rounded" alt="profile picture">
-                      <div class="centered">Project 1</div>
+                      <img src="./assets/images/ReadMe book search app.png" class="rounded" alt="book search app"
+                        href="https://jmacr0.github.io/project_one/" onclick="">
+                      <div class="centered">Project 1 Book Search App</div>
                     </div>
                   </div>
                 </div>
                 <div class="col-sm">
                   <div class="text-center">
-                    <img src="./assets/images/profile_picture_andrew.jpg" class="rounded" alt="profile picture">
-                    <div class="centered">Project 2</div>
+                    <img src="./assets/images/Five star reviews.JPG" class="rounded" alt="profile picture"
+                      href="https://fivestarhotels.herokuapp.com/index.html" onclick="">
+                    <div class="centered">Project 2 Hotel Reviews</div>
                   </div>
                 </div>
                 <div class="col-sm">
                   <div class="text-center">
-                    <img src="./assets/images/profile_picture_andrew.jpg" class="rounded" alt="profile picture">
-                    <div class="centered">Project 3</div>
+                    <img src="./assets/images/random password generation1a.png" class="rounded"
+                      alt="random password generation" href="https://andyjohncey.github.io/homework-03-js/" onclick="">
+                    <div class="centered">Random Password Generation</div>
                   </div>
                 </div>
               </div>
@@ -56,8 +58,8 @@
               <div class="row align-items-end">
                 <div class="col-sm">
                   <div class="text-center">
-                    <img src="./assets/images/profile_picture_andrew.jpg" class="rounded" alt="profile picture">
-                    <div class="centered">Project 4</div>
+                    <img src="./assets/images/day planner.png" class="rounded" alt="day planner" href="">
+                    <div class="centered">Day Planner</div>
                   </div>
                 </div>
                 <div class="col-sm">
