hide unsed project spaces

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
                     <div class="centered">Day Planner</div>
                   </div>
                 </div>
-                <div class="col-sm">
+                <!-- <div class="col-sm">
                   <div class="text-center">
                     <img src="./assets/images/profile_picture_andrew.jpg" class="rounded" alt="profile picture">
                     <div class="centered">Project 5</div>
@@ -73,7 +73,7 @@
                     <img src="./assets/images/profile_picture_andrew.jpg" class="rounded" alt="profile picture">
                     <div class="centered">Project 6</div>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
     </section>
